Add index medias queries (tablet/mobile)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>FishEye</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <title>FishEye</title>
         <a href="#" class="logo"><img src="./images/FishEyeLogo.png" alt="Fisheye Home page"></a>
         <nav aria-label="photographer categories">
-            <ul class="categories">
+            <ul class="categories categories--banner">
                 <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Portrait</a></li>
                 <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Art</a></li>
                 <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Fashion</a></li>
@@ -47,59 +47,54 @@
                 <div class="photographer-card__picture">
                     <img src="./images/pictures/index/Ellie-Rose.png" alt="">
                 </div>
-                <h2 class="photographer-card__name">Mimi Keel</h2>
-                <p class="photographer-card__location">London, UK</p>
-                <p class="photographer-card__description">Voir le beau dans le quotidien</p>                
-                <p class="photographer-card__price">400€/jour</p>
+                <h2 class="photographer-card__name">Ellie-Rose Wilkens</h2>
+                <p class="photographer-card__location">Paris, France</p>
+                <p class="photographer-card__description">Travaille sur des compositions complexes</p>                
+                <p class="photographer-card__price">250€/jour</p>
                 <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>sports</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>architecture</a></li>
                 </ul>
             </article>
             <article class="photographer-card">
                 <div class="photographer-card__picture">
                     <img src="./images/pictures/index/Tracy.png" alt="">
                 </div>
-                <h2 class="photographer-card__name">Mimi Keel</h2>
-                <p class="photographer-card__location">London, UK</p>
-                <p class="photographer-card__description">Voir le beau dans le quotidien</p>                
-                <p class="photographer-card__price">400€/jour</p>
+                <h2 class="photographer-card__name">Tracy Galindo</h2>
+                <p class="photographer-card__location">Montreal, Canada</p>
+                <p class="photographer-card__description">Photographe freelance</p>                
+                <p class="photographer-card__price">500€/jour</p>
                 <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>art</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>fashion</a></li>
                     <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
                 </ul>
             </article>
             <article class="photographer-card">
                 <div class="photographer-card__picture">
                     <img src="./images/pictures/index/Nabeel.png" alt="">
                 </div>
-                <h2 class="photographer-card__name">Mimi Keel</h2>
-                <p class="photographer-card__location">London, UK</p>
-                <p class="photographer-card__description">Voir le beau dans le quotidien</p>                
-                <p class="photographer-card__price">400€/jour</p>
+                <h2 class="photographer-card__name">Nabeel Bradford</h2>
+                <p class="photographer-card__location">Mexico City, Mexico</p>
+                <p class="photographer-card__description">Je vais toujours de l'avant</p>                
+                <p class="photographer-card__price">350€/jour</p>
                 <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
                     <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
                 </ul>
             </article>
             <article class="photographer-card">
                 <div class="photographer-card__picture">
                     <img src="./images/pictures/index/Rhode.png" alt="">
                 </div>
-                <h2 class="photographer-card__name">Mimi Keel</h2>
-                <p class="photographer-card__location">London, UK</p>
-                <p class="photographer-card__description">Voir le beau dans le quotidien</p>                
-                <p class="photographer-card__price">400€/jour</p>
+                <h2 class="photographer-card__name">Rhode Dubois</h2>
+                <p class="photographer-card__location">Barcelona, Spain</p>
+                <p class="photographer-card__description">Créatrice de souvenirs</p>                
+                <p class="photographer-card__price">375€/jour</p>
                 <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>sport</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>fashion</a></li>
                     <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
                     <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
                 </ul>
             </article>
@@ -107,15 +102,13 @@
                 <div class="photographer-card__picture">
                     <img src="./images/pictures/index/Marcel.png" alt="">
                 </div>
-                <h2 class="photographer-card__name">Mimi Keel</h2>
-                <p class="photographer-card__location">London, UK</p>
-                <p class="photographer-card__description">Voir le beau dans le quotidien</p>                
-                <p class="photographer-card__price">400€/jour</p>
+                <h2 class="photographer-card__name">Marcel Nikolic</h2>
+                <p class="photographer-card__location">Berlin, Germany</p>
+                <p class="photographer-card__description">Toujours à la recherche de LA photo</p>                
+                <p class="photographer-card__price">300€/jour</p>
                 <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
                     <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>architecture</a></li>
                 </ul>
             </article>
         </section>
