--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <script type="text/javascript" src="./scripts/script.js"></script>
     <title>FishEye</title>
 </head>
 <body>
-    <div class="toMain"></div>
+    <div class="toMain">Passer au contenu</div>
     <header class="banner" role="banner">
         <title>FishEye</title>
         <a href="#" class="logo"><img src="./images/FishEyeLogo.png" alt="Fisheye Home page"></a>
@@ -27,95 +28,8 @@
     </header>
     <main>
         <h1 role="heading">Nos photographes</h1>
-        <section class="photographers">
-            <article class="photographer-card">
-                <div class="photographer-card__picture">
-                    <img src="./images/pictures/index/Mimi.png" alt="">
-                </div>
-                <h2 class="photographer-card__name">Mimi Keel</h2>
-                <p class="photographer-card__location">London, UK</p>
-                <p class="photographer-card__description">Voir le beau dans le quotidien</p>                
-                <p class="photographer-card__price">400€/jour</p>
-                <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
-                </ul>
-            </article>
-            <article class="photographer-card">
-                <div class="photographer-card__picture">
-                    <img src="./images/pictures/index/Ellie-Rose.png" alt="">
-                </div>
-                <h2 class="photographer-card__name">Ellie-Rose Wilkens</h2>
-                <p class="photographer-card__location">Paris, France</p>
-                <p class="photographer-card__description">Travaille sur des compositions complexes</p>                
-                <p class="photographer-card__price">250€/jour</p>
-                <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>sports</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>architecture</a></li>
-                </ul>
-            </article>
-            <article class="photographer-card">
-                <div class="photographer-card__picture">
-                    <img src="./images/pictures/index/Tracy.png" alt="">
-                </div>
-                <h2 class="photographer-card__name">Tracy Galindo</h2>
-                <p class="photographer-card__location">Montreal, Canada</p>
-                <p class="photographer-card__description">Photographe freelance</p>                
-                <p class="photographer-card__price">500€/jour</p>
-                <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>art</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>fashion</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
-                </ul>
-            </article>
-            <article class="photographer-card">
-                <div class="photographer-card__picture">
-                    <img src="./images/pictures/index/Nabeel.png" alt="">
-                </div>
-                <h2 class="photographer-card__name">Nabeel Bradford</h2>
-                <p class="photographer-card__location">Mexico City, Mexico</p>
-                <p class="photographer-card__description">Je vais toujours de l'avant</p>                
-                <p class="photographer-card__price">350€/jour</p>
-                <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
-                </ul>
-            </article>
-            <article class="photographer-card">
-                <div class="photographer-card__picture">
-                    <img src="./images/pictures/index/Rhode.png" alt="">
-                </div>
-                <h2 class="photographer-card__name">Rhode Dubois</h2>
-                <p class="photographer-card__location">Barcelona, Spain</p>
-                <p class="photographer-card__description">Créatrice de souvenirs</p>                
-                <p class="photographer-card__price">375€/jour</p>
-                <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>sport</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>fashion</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
-                </ul>
-            </article>
-            <article class="photographer-card">
-                <div class="photographer-card__picture">
-                    <img src="./images/pictures/index/Marcel.png" alt="">
-                </div>
-                <h2 class="photographer-card__name">Marcel Nikolic</h2>
-                <p class="photographer-card__location">Berlin, Germany</p>
-                <p class="photographer-card__description">Toujours à la recherche de LA photo</p>                
-                <p class="photographer-card__price">300€/jour</p>
-                <ul class="categories photographer-card__categories">
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
-                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>architecture</a></li>
-                </ul>
-            </article>
+        <section id="photographers-section">
         </section>
     </main>
-    <main>
-
-    </main>
-    
 </body>
 </html>
