Modifications of js index page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>FishEye</title>
 </head>
 <body>
-    <div class="toMain">Passer au contenu</div>
+    <a href="#main" id="to-main">Passer au contenu</a>
     <header class="banner" role="banner">
         <title>FishEye</title>
         <a href="#" class="logo"><img src="./images/FishEyeLogo.png" alt="Fisheye Home page"></a>
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main">
         <h1 role="heading">Nos photographes</h1>
         <section id="photographers-section">
         </section>
