Modify function for filters

--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/photographer.css">
     <title>FishEye</title>
 </head>
 <body>
@@ -13,6 +13,21 @@
         <a href="#" class="logo"><img src="../images/FishEyeLogo.png" alt="Fisheye Home page"></a>
     </header>
     <main>
+        <section class="photographer-card">
+            <div class="photographer-card__info">
+                <h1 class="photographer-card__name">Mimi Keel</h1>
+                <p class="photographer-card__location">London, UK</p>
+                <p class="photographer-card__description">Voir le beau dans le quotidien</p>
+                <ul class="categories photographer-card__categories">
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>portrait</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>events</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>travel</a></li>
+                    <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
+                </ul>
+            </div>
+            <button type="button"><a href="">Contactez-moi</a></button>
+            <img src="../images/pictures/portraits/MimiKeel.jpg" class="photographer-card__picture" alt="">
+        </section>
     </main>
 </body>
 </html>
