Begin to create photographer page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Fashion</a></li>
                 <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Architecture</a></li>
                 <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Travel</a></li>
-                <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Sport</a></li>
+                <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Sports</a></li>
                 <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Animals</a></li>
                 <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>Events</a></li>
             </ul>
