--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/photographer.css">
+    <script type="text/javascript" src="../scripts/photographer.js"></script>
     <title>FishEye</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
                     <li class="tag"><a href="" class="tag__link" role="link"><span aria-hidden="true">#</span>animals</a></li>
                 </ul>
             </div>
-            <button type="button"><a href="">Contactez-moi</a></button>
+            <button class="photographer-card__button" type="button"><a href="">Contactez-moi</a></button>
             <img src="../images/pictures/portraits/MimiKeel.jpg" class="photographer-card__picture" alt="">
         </section>
     </main>
