pictures section modifications

--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/photographer.css">
     <script type="text/javascript" src="../scripts/photographer.js"></script>
+    <script src="https://kit.fontawesome.com/5a1a417096.js" crossorigin="anonymous"></script>
     <title>FishEye</title>
 </head>
 <body>
