--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="../styles/photographer.css">
     <script type="text/javascript" src="../scripts/photographer.js"></script>
     <script src="https://kit.fontawesome.com/5a1a417096.js" crossorigin="anonymous"></script>
-    <title>FishEye</title>
+    <title></title>
 </head>
 <body>
     <header class="banner" role="banner">
         <title>FishEye</title>
-        <a href="#" class="logo"><img src="../images/FishEyeLogo.png" alt="Fisheye Home page"></a>
+        <a href="../index.html" class="logo"><img src="../images/FishEyeLogo.png" alt="Fisheye Home page"></a>
     </header>
     <main>
     </main>
