--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="#main" id="to-main">Passer au contenu</a>
     <header class="banner" role="banner">
         <title>FishEye</title>
-        <a href="#" class="logo"><img src="./images/FishEyeLogo.png" alt="Fisheye Home page"></a>
+        <a href="#" class="logo"><img src="./images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
     </header>
     <main id="main">
         <h1 role="heading">Nos photographes</h1>
