--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -12,7 +12,7 @@
 <body>
     <header class="banner" role="banner">
         <title>FishEye</title>
-        <a href="../index.html" class="logo"><img src="../images/FishEyeLogo.png" alt="Fisheye Home page"></a>
+        <a href="../index.html" class="logo"><img src="../images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
     </header>
     <main>
     </main>
