--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#" class="logo"><img src="./images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
     </header>
     <main id="main">
-        <h1 role="heading">Nos photographes</h1>
+        <h1>Nos photographes</h1>
         <section id="photographers-section">
         </section>
     </main>
