--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/photographer.css">
-    <script type="text/javascript" src="../scripts/photographer.js"></script>
+    <script src="../scripts/photographer.js"></script>
     <script src="https://kit.fontawesome.com/5a1a417096.js" crossorigin="anonymous"></script>
     <title></title>
 </head>
 <body>
-    <header class="banner" role="banner">
-        <title>FishEye</title>
+    <header class="banner">
         <a href="../index.html" class="logo"><img src="../images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
     </header>
     <main>
