--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/photographer.css">
+    <script src="../scripts/form.js"></script>
     <script src="../scripts/photographer.js"></script>
     <script src="https://kit.fontawesome.com/5a1a417096.js" crossorigin="anonymous"></script>
-    <title></title>
+    <title>photographer</title>
 </head>
 <body>
     <header class="banner">
