--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <script type="text/javascript" src="./scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
     <title>FishEye</title>
 </head>
 <body>
     <a href="#main" id="to-main">Passer au contenu</a>
-    <header class="banner" role="banner">
-        <a href="#" class="logo"><img src="./images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
+    <header class="banner">
+        <a href="#" class="logo" alt="Fisheye Home page"><img src="./images/icons/FishEyeLogo.png"></a>
     </header>
     <main id="main">
-        <h1>Nos photographes</h1>
         <section id="photographers-section">
+            <h1>Nos photographes</h1>
         </section>
     </main>
 </body>
