--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -8,11 +8,11 @@
     <script src="../scripts/form.js"></script>
     <script src="../scripts/photographer.js"></script>
     <script src="https://kit.fontawesome.com/5a1a417096.js" crossorigin="anonymous"></script>
-    <title>photographer</title>
+    <title>Photographer page</title>
 </head>
 <body>
     <header class="banner">
-        <a href="../index.html" class="logo"><img src="../images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
+        <a href="../index.html" alt="Fisheye Home page" class="logo"><img src="../images/icons/FishEyeLogo.png"></a>
     </header>
     <main>
     </main>
