--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <a href="#main" id="to-main">Passer au contenu</a>
     <header class="banner">
-        <a href="#" class="logo" alt="Fisheye Home page"><img src="./images/icons/FishEyeLogo.png"></a>
+        <a href="#" class="logo"><img src="./images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
     </header>
     <main id="main">
         <section id="photographers-section">
