--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="banner">
-        <a href="../index.html" alt="Fisheye Home page" class="logo"><img src="../images/icons/FishEyeLogo.png"></a>
+        <a href="../index.html" class="logo"><img src="../images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
     </header>
     <main>
     </main>
