--- a/pages/photographer.html
+++ b/pages/photographer.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/photographer.css">
     <script src="../scripts/photographer.js"></script>
-    <script src="https://kit.fontawesome.com/5a1a417096.js" crossorigin="anonymous"></script>
-    <title>Photographer page</title>
+    <script src="https://kit.fontawesome.com/5a1a417096.js" data-auto-a11y="false" crossorigin="anonymous">  
+    </script>
 </head>
 <body>
     <header class="banner">
-        <a href="../index.html" class="logo"><img src="../images/icons/FishEyeLogo.png" alt="Fisheye Home page"></a>
+        <a href="../index.html" class="logo" title="revenir à la page d'accueil" id="back"><img src="../images/icons/FishEyeLogo.png" alt="Fisheye Home page" aria-labelledby="back"></a>
     </header>
     <main>
     </main>
